@@ -149,6 +149,8 @@ $labels['headerindex'] = 'Header index';
 $labels['headerdelall'] = 'all occurrences';
 $labels['last'] = 'last';
 $labels['arialabelfiltersform'] = 'Filters edit form';
+$labels['createfilter'] = 'Create filter';
+$labels['createfilterbased'] = 'Create a filter based on this message';
 
 $messages = array();
 $messages['nosieverules'] = 'No filters found.';
@@ -209,5 +211,6 @@ $messages['badtimeformat'] = 'Error: Please enter the time in the format HH:MM:S
 $messages['missingfoldername'] = 'Error: Please enter a folder name';
 $messages['eheadernoname'] = 'Error: Please enter a header name';
 $messages['eheadernoval'] = 'Error: Please enter a header value';
+$messages['addtoexisting'] = 'Select an existing filter from the list on the left hand side to add the new criteria to it or select from the options below.';
 
 ?>
