@@ -1,6 +1,7 @@
 Roundcube Webmail SieveRules
 ============================
 
+ * Merge quickrules plugin into this one
  * Add connection options like 109bcce
  * Update after dev-accessibility merged to RC master
  * Update to TinyMCE 4 (731d190)
